[FIX] Fix bad text-background contrast in tables in popovers. Thanks, Marc.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@59479 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/yeti/less/bootswatch.less
+++ b/themes/yeti/less/bootswatch.less
@@ -441,3 +441,5 @@ input[type="checkbox"] {
 .alert-info input { color: #222222 !important; } // This line and next added r59239
 .navbar-default .dropdown-menu > li > a:hover { color: #ffffff; }
 .navbar-default .dropdown-menu > .active > a { color: #bdbdbd; }
+
+.popover-content .table { color: @text-color; }
